# gran-prix

./: .gitignore  Cargo.toml  IDEAS.md  LICENSE  MIGRATION.md  README.md  REFACTORING_PHASE_1B_REPORT.md  REFACTORING_PHASE_1C_REPORT.md  REFACTORING_PHASE_1D_REPORT.md  WASM_MODULARIZATION_PLAN.md  model.json  package-lock.json
.claude/: settings.json
.github/workflows/: deploy.yml
demo-web/: NOVO-DEMO.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
demo-web/public/pkg/: gran_prix_wasm.js  gran_prix_wasm_bg.wasm
demo-web/src/: App.tsx  index.css  types.ts
demo-web/src/components/: BrainInspector.tsx  ClassifierDemo.tsx  GameCanvas.tsx  GameControls.tsx  GoogleTagManager.tsx  Header.tsx  (+4 more)
docs/: proposal-oven.md  proposal-smart-grid.md  proposal-trader.md  proposal-vacuum.md  theory.md
examples/: autograd_demo.rs  benchmark.rs  benchmark_torch.py  braille.rs  custom_op.rs  edge_inference.rs  fusion_demo.rs  game_ai.rs  graph_persistence.rs  macro_demo.rs  memory_demo.rs  mnist_tiny.rs  next_gen_demo.rs  orchestration_final.rs  profiling.rs  system_optimizer.rs  verify_demo.rs  xor.rs
gran-prix-wasm/: Cargo.toml
gran-prix-wasm/src/: brain.rs  diag.rs  errors.rs  lib.rs  mutation.rs  population.rs  trainer.rs
src/: errors.rs  lib.rs  macros.rs  network_def.rs  optim.rs  params.rs  scheduler.rs  tensor.rs  tests_math.rs
src/activations/: mod.rs
src/backend/: cpu.rs  mod.rs
src/graph/: architecture.rs  buffer_pool.rs  dsl.rs  engine.rs  memory_planner.rs  mod.rs  node.rs  ops.rs  optimizer.rs  verifier.rs
src/layers/: activation.rs  batchnorm.rs  gru.rs  linear.rs  mod.rs  rnn.rs
src/loss/: mod.rs
src/models/: mod.rs
src/optim/: mod.rs
src/tensor/: mod.rs  ops.rs  storage.rs
src/types/: mod.rs
tests/: autograd_tests.rs  cnn_tests.rs  cpu_backend_tests.rs  cuda_parity.rs  dropout_batchnorm_tests.rs  integration_tests.rs  macro_tests.rs  math_verification.rs  memory_tests.rs  multilayer_repro.rs  optimizer_tests.rs  persistence_flow_tests.rs  robustness_graph.rs  robustness_layers.rs  robustness_memory.rs  robustness_training.rs  vision_autograd_tests.rs  wasm_path_test.rs
(+185 files in other folders)
