[package]
name = "gran-prix"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rand = "0.8"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
typetag = "0.2"
rayon = { version = "1.10", optional = true }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
cudarc = { version = "0.12", features = ["std", "nvrtc", "curand", "cublas", "cuda-version-from-build-system"], optional = true }

[features]
default = ["rayon"]
cuda = ["dep:cudarc"]
rayon = ["dep:rayon", "ndarray/rayon"]
