[package]
name = "gran-prix-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
ndarray = { version = "0.15", features = ["serde"] }

[dependencies.gran-prix]
path = "../"
default-features = false
