[package]
name = "gran-prix-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
serde_json = "1.0"
ndarray = { version = "0.15", features = ["serde"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.gran-prix]
path = "../"
default-features = false

[profile.dev]
debug = true
lto = false
opt-level = 0

[profile.release]
debug = true
lto = false
opt-level = "s"
